# simplestart-github-actions

./: README.md  pyproject.toml  setup.py  test.py
.github/workflows/: build.yml  build.yml.txt_手动不整合打包
simplestart/: __init__.py  launch.py  pyramid.c  router.py  server.c  setup.c  simplestream.c
simplestart/api/: backup.c  message.c  sqlite.c
simplestart/core/: __init__.py  base.c  component.c  config.c  container.c  main.c  session.c  state.c  storage.c  template.c  utils.c  vuetify.c
simplestart/modules/: errors.c  handlers.c  menu.c  monitor.c  pages.c
simplestart/ss_api/: backup.c  message.c  sqlite.c
simplestart/ss_core/: __init__.py  base.c  component.c  config.c  container.c  event_chain.c  file_map.c  main.c  print.c  reactive.c  session.c  state.c  storage.c  streamsync_state.c  template.c  utils.c  vuetify.c  vuetify_要通过prop.属性访问的备份版本.c
simplestart/ss_modules/: __init__.py  errors.c  handlers.c  handlers_nothreading_bak.c  menu.c  monitor.c  pages.c
simplestart/ss_system/: default.py
simplestart/ss_ui/: __init__.py  affix.c  alert.c  anchor.c  audio.c  autocomplete.c  avatar.c  badge.c  breadcrumb.c  button.c  card.c  carousel.c  checkbox.c  collapse.c  colorpicker.c  columns.c  descriptions.c  dialog.c  divider.c  echarts.c  empty.c  grid.c  htmlview.c  icon.c  image.c  input.c  input_number.c  layout.c  link.c  listbox.c  markdown.c  menu.c  messagebox.c  overlay.c  panel.c  panes.c  plot.c  popconfirm.c  radio.c  rate.c  (+15 more)
simplestart/static/: config.js  index.html
simplestart/static/assets/: charts-dyKuIY-1.js  index-0ecc89b2.js  index-819d0485.css  index-BBar7T5I.css  index-BgZWMJUL.js  index-BtG821Zr.js  index-CH0ugqd6.css  index-CPOfkHsT.js  index-CS4cRomq.js  index-CUSH6F0E.css  index-Cf7XFAAP.js  index-Cy1PoNxp.css  index-DJPBL5o-.css  index-DQylE4v1.css  index-DRZdbV_9.js  index-Djlc_wwS.js  index-DuHKyErZ.js  index-DzMKHIKD.js  index-lsEnwu4p.css  ui-BLTEoBf4.js  ui-DdnYL_Ev.js  ui-jhEiTBQY.js  utils-BC30GpAX.js  vue-BOKO93B6.js  vue-Ddd9tG2m.js  vue-g3-eVYZ2.js
simplestart/system/: default.py
simplestart/ui/: __init__.py  affix.c  alert.c  anchor.c  audio.c  autocomplete.c  avatar.c  badge.c  breadcrumb.c  button.c  card.c  carousel.c  checkbox.c  collapse.c  colorpicker.c  columns.c  descriptions.c  dialog.c  divider.c  echarts.c  empty.c  grid.c  htmlview.c  icon.c  image.c  input.c  layout.c  link.c  listbox.c  markdown.c  menu.c  messagebox.c  overlay.c  panel.c  popconfirm.c  radio.c  rate.c  selectbox.c  slider.c  space.c  (+8 more)
