[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simplestart"
# 注意：版本号现在由 setup.py 动态读取，这里可以写占位符，或者保持同步
version = "0.0.1.44" 
description = "build web app using python"
readme = "readme.md"
requires-python = ">=3.10, <3.14"
license = { text = "MIT" }
authors = [
    { name = "wy" }
]
keywords = ["web", "framework", "async", "ui", "element ui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "starlette==0.50.0",
    "uvicorn[standard]>=0.23.0",
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.1.0",
    "pandas>=1.5.0",
    "easydict>=1.9.0",
    "pillow>=9.0.0"
]

[project.scripts]
pyramid = "simplestart.pyramid:main"
ss = "simplestart.launch:start"
simplestart = "simplestart.launch:start"

[project.url]
Homepage = "https://example.com"

# --- 重要：删除 [tool.setuptools.packages.find] ---
# 让 setup.py 中的 find_packages() 和 ext_modules 完全控制打包过程