[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simplestart"
version = "0.0.1.52"
description = "build web app using python"
readme = "readme.md"
requires-python = ">=3.10, <3.14"
license = "MIT"
authors = [
    {name = "wy"}
]
keywords = ["web", "framework", "async", "ui", "element ui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "starlette==0.50.0",
    "uvicorn[standard]>=0.23.0",
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.1.0",
    "pandas>=1.5.0",
    "easydict>=1.9.0",
    "pillow>=9.0.0"
]

[project.scripts]
pyramid = "simplestart.pyramid:main"
ss = "simplestart.launch:start"
simplestart = "simplestart.launch:start"

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = [".", "./simplestart"]  # 从当前目录和simplestart目录查找包
include = ["simplestart"]  # 包含simplestart包，会安装在site-package
namespaces = false  # 是否使用命名空间包

[tool.setuptools.package-data]
"simplestart" = ["*.py", "ss_core/*.py", "ss_api/*.py", "ss_modules/*.py", "ss_ui/*.py", "ss_system/*.py", "static/*", "static/**/*"]
